Changelog of lizard-waterbalance
===================================================


0.10 (unreleased)
-----------------

- Added graph choice: display per year/month/day.

- Made monthly totals/average more flexible by allowing year/month/day.

- The Admin interface to the selection of FEWS-timeseries has become more
  user-friendly.

- The user can select the graph "fractions phosphate".

- The graph "phophate impact" is now computed on the incoming discharges
  instead of the open water volume.

- The date range selector for the horizontal axis of each graph functions.


0.9 (2011-02-23)
----------------

- The Admin interface supports the selection of FEWS and non-FEWS timeseries.

- The computation retrieves the non-FEWS timeseries from the database. Only the
  FEWS timeseries are retrieved from the ASCII file.

- Streamlined the Waterbalance summary page. The page has become more
  user-friendly and does not show hardcoded data (except forthe FEWS
  timeseries).

- Added caching for waterbalance area graph data, including button to
  re-calculate that data.


0.8 (2011-02-17)
----------------

- The waterbalance apps has been made better reusable.


0.7 (2011-02-14)
----------------

- The waterbalance is recomputed each time the user views a waterbalance
  graph. To save time, the results are not stored in the database.


0.6 (2011-02-09)
----------------

- Due to rounding errors, it was possible the different fractions did not add
  up to 1.0.

- The fraction distribution graph displays the chloride levels.

- The phosphate impact graph can be shown.

0.5 (2011-02-02)
----------------

- The fractions are also computed and stored for the intakes and pumps.


0.4 (2011-01-31)
----------------

- Implemented the ground work for the waterbalance summary screen.

- Implemented the ground work for the waterbalance fraction graph.

- The fraction calculation time series are stored in the database.


0.3 (2011-01-27)
----------------
