@@ -50,6 +50,7 @@ pkginfo = 0.7
 pyflakes = 0.4.0
 shapely = 1.2.8
 south = 0.7.3
+xlrd = 0.7.1
 zest.releaser = 3.20
 
 
