@@ -1,2 +1,4 @@
 [nosetests]
 with-xunit=1
+with-doctest=1
+doctest-extension=rst
